Refactor property handling and enhance CORS, logging, and tests
Improved configuration management by standardizing property naming and enabling `spring-boot-configuration-processor`. Enhanced CORS settings with more granular control and improved logging in REST controllers with execution time tracking. Modified tests for better validation, migrated assertion library to AssertJ, and addressed consistency in response handling.